longer email field

--- a/mvp.css
+++ b/mvp.css
@@ -400,6 +400,10 @@ label {
     margin-bottom: 0.2rem;
 }
 
+input.email {
+    width: var(--width-card-medium);
+}
+
 /* Tables */
 table {
     border: 1px solid var(--color-bg-secondary);
