--- a/mvp.css
+++ b/mvp.css
@@ -701,5 +701,5 @@ marquee.bottom {
 #typed {
     width: 250px; /* or whatever width you want. */
     max-width: 250px; /* or whatever width you want. */
-    display: inline-block;
+    display: inline;
 }
