--- a/mvp.css
+++ b/mvp.css
@@ -152,7 +152,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline-block;
+    display: inline;
     margin: 0 0.5rem;
     position: relative;
     text-align: left;
