--- a/mvp.css
+++ b/mvp.css
@@ -30,7 +30,7 @@
     --knockoutColor: #fff;
 }
 
-/*
+/* 
 @media (prefers-color-scheme: dark) {
     :root {
         --color: #0097fc;
@@ -43,8 +43,11 @@
         --color-text: #f7f7f7;
         --color-text-secondary: #aaa;
     }
+} */
+
+html {
+    scroll-behavior: smooth;
 }
-*/
 
 /* Layout */
 
@@ -135,7 +138,6 @@ header #logo {
     font-size: 20px;
 }
 
-
 /* Nav */
 
 nav {
@@ -152,7 +154,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin: 0 0.5rem;
     position: relative;
     text-align: left;
@@ -171,7 +173,7 @@ nav ul li ul {
     box-shadow: var(--box-shadow) var(--color-shadow);
     display: none;
     height: auto;
-    left: -2px;
+    left: -7em;
     padding: .5rem 1rem;
     position: absolute;
     top: 1.7rem;
@@ -407,7 +409,7 @@ label {
 }
 
 input.email {
-    width: var(--width-card-medium);
+    width: var(--width-card);
 }
 
 /* Tables */
@@ -485,176 +487,174 @@ blockquote footer {
     margin-right: auto
 }
 
-
-.resp-sharing-button__link,
-.resp-sharing-button__icon {
-  display: inline-block
+.resp-sharing-button__link, .resp-sharing-button__icon {
+    display: inline-block
 }
 
 .resp-sharing-button__link {
-  text-decoration: none;
-  color: #fff;
-  margin: 0.5em
+    text-decoration: none;
+    color: #fff;
+    margin: 0.5em
 }
 
 .resp-sharing-button {
-  border-radius: 5px;
-  transition: 25ms ease-out;
-  padding: 0.5em 0.75em;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
+    border-radius: 5px;
+    transition: 25ms ease-out;
+    padding: 0.5em 0.75em;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif
 }
 
 .resp-sharing-button__icon svg {
-  width: 1em;
-  height: 1em;
-  margin-right: 0.4em;
-  vertical-align: top
+    width: 1em;
+    height: 1em;
+    margin-right: 0.4em;
+    vertical-align: top
 }
 
 .resp-sharing-button--small svg {
-  margin: 0;
-  vertical-align: middle
+    margin: 0;
+    vertical-align: middle
 }
 
 /* Non solid icons get a stroke */
+
 .resp-sharing-button__icon {
-  stroke: #fff;
-  fill: none
+    stroke: #fff;
+    fill: none
 }
 
 /* Solid icons get a fill */
-.resp-sharing-button__icon--solid,
-.resp-sharing-button__icon--solidcircle {
-  fill: #fff;
-  stroke: none
+
+.resp-sharing-button__icon--solid, .resp-sharing-button__icon--solidcircle {
+    fill: #fff;
+    stroke: none
 }
 
 .resp-sharing-button--twitter {
-  background-color: #55acee
+    background-color: #55acee
 }
 
 .resp-sharing-button--twitter:hover {
-  background-color: #2795e9
+    background-color: #2795e9
 }
 
 .resp-sharing-button--pinterest {
-  background-color: #bd081c
+    background-color: #bd081c
 }
 
 .resp-sharing-button--pinterest:hover {
-  background-color: #8c0615
+    background-color: #8c0615
 }
 
 .resp-sharing-button--facebook {
-  background-color: #3b5998
+    background-color: #3b5998
 }
 
 .resp-sharing-button--facebook:hover {
-  background-color: #2d4373
+    background-color: #2d4373
 }
 
 .resp-sharing-button--tumblr {
-  background-color: #35465C
+    background-color: #35465C
 }
 
 .resp-sharing-button--tumblr:hover {
-  background-color: #222d3c
+    background-color: #222d3c
 }
 
 .resp-sharing-button--reddit {
-  background-color: #5f99cf
+    background-color: #5f99cf
 }
 
 .resp-sharing-button--reddit:hover {
-  background-color: #3a80c1
+    background-color: #3a80c1
 }
 
 .resp-sharing-button--google {
-  background-color: #dd4b39
+    background-color: #dd4b39
 }
 
 .resp-sharing-button--google:hover {
-  background-color: #c23321
+    background-color: #c23321
 }
 
 .resp-sharing-button--linkedin {
-  background-color: #0077b5
+    background-color: #0077b5
 }
 
 .resp-sharing-button--linkedin:hover {
-  background-color: #046293
+    background-color: #046293
 }
 
 .resp-sharing-button--email {
-  background-color: #777
+    background-color: #777
 }
 
 .resp-sharing-button--email:hover {
-  background-color: #5e5e5e
+    background-color: #5e5e5e
 }
 
 .resp-sharing-button--xing {
-  background-color: #1a7576
+    background-color: #1a7576
 }
 
 .resp-sharing-button--xing:hover {
-  background-color: #114c4c
+    background-color: #114c4c
 }
 
 .resp-sharing-button--whatsapp {
-  background-color: #25D366
+    background-color: #25D366
 }
 
 .resp-sharing-button--whatsapp:hover {
-  background-color: #1da851
+    background-color: #1da851
 }
 
 .resp-sharing-button--hackernews {
-background-color: #FF6600
+    background-color: #FF6600
 }
-.resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {   background-color: #FB6200 }
+
+.resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {
+    background-color: #FB6200
+}
 
 .resp-sharing-button--vk {
-  background-color: #507299
+    background-color: #507299
 }
 
 .resp-sharing-button--vk:hover {
-  background-color: #43648c
+    background-color: #43648c
 }
 
 .resp-sharing-button--facebook {
-  background-color: #3b5998;
-  border-color: #3b5998;
+    background-color: #3b5998;
+    border-color: #3b5998;
 }
 
-.resp-sharing-button--facebook:hover,
-.resp-sharing-button--facebook:active {
-  background-color: #2d4373;
-  border-color: #2d4373;
+.resp-sharing-button--facebook:hover, .resp-sharing-button--facebook:active {
+    background-color: #2d4373;
+    border-color: #2d4373;
 }
 
 .resp-sharing-button--twitter {
-  background-color: #55acee;
-  border-color: #55acee;
+    background-color: #55acee;
+    border-color: #55acee;
 }
 
-.resp-sharing-button--twitter:hover,
-.resp-sharing-button--twitter:active {
-  background-color: #2795e9;
-  border-color: #2795e9;
+.resp-sharing-button--twitter:hover, .resp-sharing-button--twitter:active {
+    background-color: #2795e9;
+    border-color: #2795e9;
 }
 
 .resp-sharing-button--whatsapp {
-  background-color: #25D366;
-  border-color: #25D366;
+    background-color: #25D366;
+    border-color: #25D366;
 }
 
-.resp-sharing-button--whatsapp:hover,
-.resp-sharing-button--whatsapp:active {
-  background-color: #1DA851;
-  border-color: #1DA851;
+.resp-sharing-button--whatsapp:hover, .resp-sharing-button--whatsapp:active {
+    background-color: #1DA851;
+    border-color: #1DA851;
 }
-
 
 div.social-contacts {
     display: flex;
@@ -673,33 +673,67 @@ div.social-contacts {
 */
 
 /* Make it a marquee */
-marquee {
-    background-color:white;
-    color: black;
+
+#stock-marquee {
+    background-color: #144168;
+    color: #ffffff;
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
-    animation: marquee 50s linear infinite;
-}
-
-marquee:hover {
-    animation-play-state: paused
-}
-
-marquee.bottom {
+    animation: marquee 15s linear infinite;
     position: fixed;
     left: 0;
     bottom: 0;
+    width: 100%;
+}
+
+#stock-marquee:hover {
+    animation-play-state: paused
 }
 
 /* Make it move */
+
 @keyframes marquee {
-    0%   { text-indent: 27.5em }
-    100% { text-indent: -105em }
+    0% {
+        text-indent: 105%
+    }
+    100% {
+        text-indent: -145%
+    }
 }
 
-#typed {
-    width: 250px; /* or whatever width you want. */
-    max-width: 250px; /* or whatever width you want. */
-    display: inline;
+span.index {
+    white-space: pre;
+}
+
+.up {
+    color: #4acb70;
+}
+
+.down {
+    color: #c65665;
+}
+
+@media only screen and (min-width: 600px) {
+    #stock-marquee {
+        background-color: #144168;
+        color: #ffffff;
+        overflow: hidden;
+        white-space: nowrap;
+        box-sizing: border-box;
+        animation: marquee 30s linear infinite;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+    }
+    /* Make it move */
+    @keyframes marquee {
+        0% {
+            text-indent: 105%
+        }
+        100% {
+            text-indent: -105%
+        }
+    }
 }
